other/restrict-dra-adminaccess-label/.kyverno-test/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
userInfo:
  username: system:serviceaccount:admin-unlabeled:limited-user
